[gd_scene load_steps=3 format=3 uid="uid://h0t0tnnycmn7"]

[ext_resource type="Script" path="res://src/shared/options/options.gd" id="1_jq3es"]
[ext_resource type="Theme" uid="uid://b8f5ydgdb2f37" path="res://src/theme/font.tres" id="2_ai14w"]

[node name="Options" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_jq3es")

[node name="Popup" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -400.0
offset_right = 300.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.145098, 0.152941, 0.196078, 1)

[node name="Title" type="Label" parent="Popup"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.05
offset_left = -161.0
offset_right = 161.0
offset_bottom = 146.0
grow_horizontal = 2
theme = ExtResource("2_ai14w")
theme_override_font_sizes/font_size = 80
text = "Options"
horizontal_alignment = 1

[node name="Menu" type="VBoxContainer" parent="Popup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -73.0
offset_right = 145.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2

[node name="Color" type="CheckButton" parent="Popup/Menu"]
layout_mode = 2
theme = ExtResource("2_ai14w")
button_pressed = true
text = "Use Color"
vertical_icon_alignment = 0

[node name="SoundVolumeLabel" type="Label" parent="Popup/Menu"]
layout_mode = 2
theme = ExtResource("2_ai14w")
text = "Sound Volume"
horizontal_alignment = 1

[node name="SoundVolume" type="HSlider" parent="Popup/Menu"]
layout_mode = 2
theme = ExtResource("2_ai14w")
max_value = 1.0
step = 0.1
value = 1.0

[node name="Close" type="Button" parent="Popup"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.95
anchor_right = 0.5
anchor_bottom = 0.95
offset_left = -145.0
offset_top = -71.0
offset_right = 145.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("2_ai14w")
theme_override_font_sizes/font_size = 35
text = "Close"

[connection signal="toggled" from="Popup/Menu/Color" to="." method="_on_color_toggled"]
[connection signal="value_changed" from="Popup/Menu/SoundVolume" to="." method="_on_sound_volume_value_changed"]
[connection signal="pressed" from="Popup/Close" to="." method="_on_close_pressed"]
